@@ -88,7 +88,7 @@ UI_EN = {
     UI_trait_badteeth = "Bad Teeth",
     UI_trait_badteethdesc = "You never took much care of your dental health.<br>When consuming food, you may experience pain. Larger portions cause more pain.",
     UI_trait_hardy = "Hardy",
-    UI_trait_hardydesc = "Whether by force of will or physical fitness, you're not one to tire after long hours working.<br>Your maximum endurance has been increased, scales with fitness level.<br>+1 Fitness",
+    UI_trait_hardydesc = "Whether by force of will or physical fitness, you're not one to tire after long hours working.<br>Your maximum endurance is increased by 25%<br>+1 Fitness",
 	UI_trait_hardyendurance = "Hardy Endurance Left",
     UI_trait_drinker = "Alcoholic",
     UI_trait_drinkerdesc = "You have a dependence on alcohol. If you go too long without alcohol, you'll begin to feel stressed, then pain, and eventually withdrawal.<br>If you go through withdrawal, you will grow progressively more sick until you drink again or die. <br>You begin the game with one bottle of whiskey - better find more booze soon.",
